Cleaned Up html + footer section + css fix for header

--- a/public/adminlteFiles/css/skin-blue.css
+++ b/public/adminlteFiles/css/skin-blue.css
@@ -4,6 +4,7 @@
  */
 .skin-blue .main-header .navbar {
   background-color: #3c8dbc;
+  margin-bottom: 0;
 }
 .skin-blue .main-header .navbar .nav > li > a {
   color: #ffffff;
