Finished XYZ company charts

--- a/public/js/app/templates/welcome.html
+++ b/public/js/app/templates/welcome.html
@@ -1,15 +1,11 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
 	<h1>
-	Page Header
-	<small>Optional description</small>
+	Welcome to your XYZ Account Panel
+	<small>Please, select a political from left panel.</small>
 	</h1>
-	<ol class="breadcrumb">
-		<li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-		<li class="active">Here</li>
-	</ol>
 </section>
 <!-- Main content -->
 <section class="content">
-	<!-- Your Page Content Here -->
+	<div id="container" class="chart-container"></div>
 </section>
