--- a/public/js/app/templates/sidebar.html
+++ b/public/js/app/templates/sidebar.html
@@ -22,18 +22,8 @@
   </form>
   <!-- /.search form -->
   <!-- Sidebar Menu -->
-  <ul class="sidebar-menu">
-    <li class="header">HEADER</li>
-    <!-- Optionally, you can add icons to the links -->
-    <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-    <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-    <li class="treeview">
-      <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
-      <ul class="treeview-menu">
-        <li><a href="#">Link in level 2</a></li>
-        <li><a href="#">Link in level 2</a></li>
-      </ul>
-    </li>
-    </ul><!-- /.sidebar-menu -->
-  </section>
-  <!-- /.sidebar -->
+  <ul class="sidebar-menu" id="candidates">
+    <li class="header">Candidates</li>
+  </ul>
+</section>
+<!-- /.sidebar -->
